--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "g": "^2.0.1",
     "nodemon": "^1.18.6",
+    "redis": "^2.8.0",
     "socket.io": "^2.1.1"
   }
 }
